# Machine_Learning_Algorithms

./: .gitignore  .gitmodules  Comment_Color_Hex_Value  Comment_Color_Hex_Value.txt  Pipfile  README.md  Todo.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  classification_with_model_garden.ipynb  code_modification_and_rewriting_files.ipynb  driver-drowsiness-using-keras.ipynb  echo_benchmark.py  example.py  fib.py  hi.ipynb  hw11_tests.zip.1  kaggle.ipynb  main.py  multiprocessing_fib.py  pygame_boilerplate.py  pyproject.toml  python.txt  req.txt  requirements.txt  revision.py
100DaysOfML/: 150AceInterViewQuestions.py  Revision.py  Top150InterviewQuestions.ipynb
100DaysOfPython/: Chatgpt.py  Game.py  Plots.py
6_001/: list_files.py
6_036/: About.md  pentomin.py
6_101/: mines_midpoint.py  mines_rec.py
6_390/: 6_390_Homework01_Spring2025.ipynb
6s191/: test.py
Algorithms/: Algorithms.py  Arrays.py  BackTrackingProblems.py  BinaryTree.py  BinaryTreeContruction.py  BinaryTreeProblems.py  DiskUsage.py  DynamicProgramming.py  EasyProblems.py  EditDistance.py  GraphProblems.py  Graphs.py  GreedyAlgorithms.py  Hashing.py  InOrderSuccessor.py  LinkedListProblems.py  MathTheory.py  MilkTea.py  MinMaxStack.py  MultiProcessingExamples.py  MultiThreading.py  NodesKDistance.py  Object_Oriented_Programming.py  Searching.py  SlidingWindow.py  Sortings.py  StacksAndQueues.py  StringProblems.py  Strings.py  Tree.py  TreeOperations.py  Trees.py  local_testing_tool.py  transpose.py
Algorithms_Revision/: LargestNumber.py
AlienInvasion/: alien_invasion.py
Chess_AI/: main.py
Deep_Learning_for_Coders/: First.ipynb
Design_Patterns/: OOPS.py
Games/: Form.py
Interview_Algorithms/: CartPole.py  Trees.py
Interview_Preparation/: Todo.md
MIT/: 6.7960 Vision MIT alias  (+2 more)
Notes/: Important.rtf  (+31 more)
(+4924 files in other folders)
