[tool.poetry]
name = "machine-learning-algorithms"
package-mode=false
version = "0.1.0"
description = ""
authors = ["Deven Kalra"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
black = {extras = ["jupyter"], version = "^24.10.0"}
flake8 = "^7.1.1"
pytest = "^8.3.3"
opencv-contrib-python = "^4.10.0.84"

matplotlib = "^3.9.3"
seaborn = "^0.13.2"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
