[tool.poetry]
name = "machine-learning-algorithms"
package-mode=false
version = "0.1.0"
description = ""
authors = ["Deven Kalra"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
black = {extras = ["jupyter"], version = "^24.10.0"}
flake8 = "^7.1.1"
pytest = "^8.3.3"

matplotlib = "^3.9.3"
seaborn = "^0.13.2"
plotly = "^5.24.1"
tqdm = "^4.67.1"
h5py = "^3.12.1"
redis = {extras = ["hiredis"], version = "^5.2.1"}
scikit-learn = "^1.6.0"
pygame = "^2.6.1"

nltk = "^3.9.1"
transformers = "^4.48.1"
numpy = "^2.2.2"

pyautogui = "^0.9.54"
python-imagesearch = "^1.3.0"
opencv-contrib-python = "^4.11.0.86"
openai = "^1.60.1"
gymnasium = {extras = ["all"], version = "^1.0.0"}
pylint = "^3.3.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
