[project]
name = "machine-learning-algorithms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.4.6",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[dependency-groups]
dev = [
    "cython>=3.2.5",
]
